--- a/style.css
+++ b/style.css
@@ -79,5 +79,16 @@ li .price {
 header a {
     text-decoration: none;
     color:#BF0404;
+}
 
+#carregar {
+    display: flex;
+    position: absolute;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background-size: 10%;
+    background: #FFF url("/Spinner-1s-200px.gif") no-repeat center center;
+    background-repeat: no-repeat;
+    background-position: center;
 }
