--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ header a {
 
 #carregar {
     display: flex;
-    position: absolute;
+    position: fixed;
     z-index: 100;
     width: 100%;
     height: 100%;
